--- a/domino_chain_player.html
+++ b/domino_chain_player.html
@@ -21,23 +21,47 @@
     font-weight:850; flex:1 1 320px;
   }
 
-  /* ===== Chain = single column (no overlap possible) ===== */
+  /* Progress */
+  .progressWrap{
+    margin-top:8px;
+    border:1px solid #e5e7eb;
+    border-radius:14px;
+    padding:10px 12px;
+    background:#fafafa;
+    display:flex;
+    gap:12px;
+    align-items:center;
+    justify-content:space-between;
+    flex-wrap:wrap;
+  }
+  .barOuter{
+    flex:1 1 320px;
+    height:12px;
+    border-radius:999px;
+    background:#e5e7eb;
+    overflow:hidden;
+  }
+  .barInner{
+    height:100%;
+    width:0%;
+    background:#111827;
+  }
+  .metric{font-size:12px;color:#111827;font-weight:850;}
+  .note{font-size:12px;color:#6b7280;}
+
+  /* Chain = single column */
   .chainWrap{
     border:1px solid #e5e7eb;
     border-radius:14px;
     background:#fafafa;
     padding:10px;
   }
-  .chain{
-    display:flex;
-    flex-direction:column;
-    gap:10px;
-  }
+  .chain{display:flex;flex-direction:column;gap:10px;}
   .slot{
     border:2px dashed #cbd5e1;
     border-radius:14px;
     background:#f8fafc;
-    min-height:78px;
+    min-height:86px;
     display:flex;
     align-items:stretch;
     justify-content:stretch;
@@ -53,32 +77,34 @@
     padding:12px;
     color:#94a3b8;
     font-size:12px;
-    font-weight:700;
+    font-weight:800;
+    text-align:center;
   }
 
-  /* ===== Tile visuals (same everywhere) ===== */
-  .tile{
+  /* Tile */
+  .tileWrap{
     width:100%;
-    display:flex;
-    align-items:stretch;
-    gap:10px;
     padding:10px;
-    background:#fff;
+    display:flex;
+    gap:10px;
+    align-items:center;
+    user-select:none;
   }
   .tileCore{
-    width:100%;
+    flex:1 1 auto;
     display:flex;
-    align-items:center;
     gap:10px;
+    align-items:center;
     border:1px solid #d1d5db;
     border-radius:14px;
     padding:10px;
     background:#fff;
+    min-width:0;
   }
   .half{
     flex:1 1 0;
     text-align:center;
-    font-weight:850;
+    font-weight:900;
     padding:10px;
     border-radius:12px;
     background:#f3f4f6;
@@ -86,28 +112,16 @@
     word-break:break-word;
   }
   .sep{width:2px;height:44px;background:#e5e7eb;border-radius:2px;flex:0 0 auto;}
-  .tileBtns{
-    display:flex;
-    gap:8px;
-    align-items:center;
-    flex:0 0 auto;
-  }
+  .tileBtns{display:flex;gap:8px;align-items:center;flex:0 0 auto;}
   .miniBtn{
     border:1px solid #d1d5db;background:#f9fafb;border-radius:12px;
     padding:8px 10px;font-weight:900;cursor:pointer;
   }
-
-  /* Drag handle feel */
-  .draggable{cursor:grab; user-select:none;}
+  .draggable{cursor:grab;}
   .draggable:active{cursor:grabbing;}
+  .selected{outline:3px solid #111827; outline-offset:2px; border-radius:16px;}
 
-  /* Selected tile (tap-to-place) */
-  .selected{
-    outline:3px solid #111827;
-    outline-offset:2px;
-  }
-
-  /* ===== Bank = responsive grid ===== */
+  /* Bank */
   .bankWrap{
     border:1px solid #e5e7eb;
     border-radius:14px;
@@ -123,10 +137,28 @@
     .bankGrid{grid-template-columns:repeat(1, minmax(0,1fr));}
   }
 
+  /* Feedback + toast */
   .feedback{margin-top:10px;padding:10px 12px;border-radius:12px;background:#f3f4f6;color:#111827;font-size:13px;}
   .ok{background:#ecfdf5;}
   .bad{background:#fff1f2;}
   .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;}
+
+  .toast{
+    position:fixed;
+    left:50%;
+    bottom:16px;
+    transform:translateX(-50%);
+    background:#111827;
+    color:#fff;
+    padding:10px 12px;
+    border-radius:999px;
+    font-size:12px;
+    font-weight:800;
+    opacity:0;
+    pointer-events:none;
+    transition:opacity .18s ease;
+  }
+  .toast.show{opacity:1;}
 </style>
 </head>
 <body>
@@ -136,7 +168,14 @@
     <div>
       <h2>Chain Dominoes</h2>
       <div class="small" id="sub">Drag tiles into the chain, or tap a tile then tap a slot.</div>
+
+      <div class="progressWrap">
+        <div class="metric" id="metricText">Correct connections: 0 / 0</div>
+        <div class="barOuter"><div class="barInner" id="barInner"></div></div>
+        <div class="note" id="noteText">Fill slots to see progress.</div>
+      </div>
     </div>
+
     <div class="row" style="justify-content:flex-end;">
       <button onclick="shuffleBank()">Shuffle bank</button>
       <button class="danger" onclick="resetAll()">Reset</button>
@@ -169,6 +208,8 @@
   <div id="feedback" class="feedback" style="display:none;"></div>
 </div>
 
+<div class="toast" id="toast"></div>
+
 <script>
   function decodeB64Unicode(b64){
     try { return decodeURIComponent(escape(atob(b64))); } catch(e){ return null; }
@@ -198,23 +239,32 @@
     throw "";
   }
 
-  // Answer tiles: consecutive steps
+  // Answer tiles
   const answerTiles = [];
   for (let i=0;i<steps.length-1;i++){
-    answerTiles.push({ id: "t"+(i+1), left: steps[i], right: steps[i+1] });
+    answerTiles.push({ id:"t"+(i+1), left:steps[i], right:steps[i+1] });
   }
-
   const expectedStart = steps[0];
   const expectedEnd = steps[steps.length-1];
 
   // State
   let bankTiles = shuffle(answerTiles.map(t => ({...t})));
   let chain = Array(answerTiles.length).fill(null);
-  let selectedId = null; // for tap-to-place
+  let selectedId = null;
 
   const slotsEl = document.getElementById("slots");
   const bankEl = document.getElementById("bank");
   const fbEl = document.getElementById("feedback");
+  const metricText = document.getElementById("metricText");
+  const noteText = document.getElementById("noteText");
+  const barInner = document.getElementById("barInner");
+  const toastEl = document.getElementById("toast");
+
+  function toast(msg){
+    toastEl.textContent = msg;
+    toastEl.classList.add("show");
+    setTimeout(()=>toastEl.classList.remove("show"), 1100);
+  }
 
   function showFeedback(html, kind){
     fbEl.style.display = "block";
@@ -243,31 +293,84 @@
     render();
   }
 
+  function getTileById(id){
+    let t = bankTiles.find(x=>x.id===id);
+    if (t) return t;
+    t = chain.find(x=>x && x.id===id);
+    return t || null;
+  }
+
+  function neighborScoreAt(slotIdx, tile){
+    // Score is how well tile fits with already-placed neighbors
+    // Left neighbor = chain[slotIdx-1], compare neighbor.right to tile.left
+    // Right neighbor = chain[slotIdx+1], compare tile.right to neighbor.left
+    let score = 0;
+    const leftN = (slotIdx > 0) ? chain[slotIdx-1] : null;
+    const rightN = (slotIdx < chain.length-1) ? chain[slotIdx+1] : null;
+
+    if (leftN) score += eq(leftN.right, tile.left) ? 1 : 0;
+    if (rightN) score += eq(tile.right, rightN.left) ? 1 : 0;
+
+    // If anchors are on, also reward matching start/end at extremes
+    if (showAnchors){
+      if (slotIdx === 0) score += eq(tile.left, expectedStart) ? 1 : 0;
+      if (slotIdx === chain.length-1) score += eq(tile.right, expectedEnd) ? 1 : 0;
+    }
+    return score;
+  }
+
+  function bestEmptySlotForTile(tile){
+    let best = { idx:null, score:-1 };
+    for (let i=0;i<chain.length;i++){
+      if (chain[i]) continue;
+      const s = neighborScoreAt(i, tile);
+      if (s > best.score){
+        best = { idx:i, score:s };
+      }
+    }
+    return best;
+  }
+
+  function removeTileFromWherever(id){
+    // Remove from bank
+    const bi = bankTiles.findIndex(t=>t.id===id);
+    if (bi !== -1) return bankTiles.splice(bi,1)[0];
+
+    // Remove from chain
+    const si = chain.findIndex(t=>t && t.id===id);
+    if (si !== -1){
+      const t = chain[si];
+      chain[si] = null;
+      return t;
+    }
+    return null;
+  }
+
   function placeTileInSlot(id, idx){
     clearFeedback();
 
-    // If slot has a tile, send it back to bank
+    const moving = removeTileFromWherever(id);
+    if (!moving) return;
+
+    // If slot occupied, bump it to bank
     if (chain[idx]) bankTiles.push(chain[idx]);
 
-    // From bank?
-    const bi = bankTiles.findIndex(t => t.id === id);
-    if (bi !== -1){
-      chain[idx] = bankTiles.splice(bi,1)[0];
-      selectedId = null;
-      render();
-      return;
+    chain[idx] = moving;
+    selectedId = null;
+
+    // AUTO-SNAP: if there is a better empty slot, move it there
+    // (Only if current score is 0 and a better slot exists with score >=1)
+    const hereScore = neighborScoreAt(idx, moving);
+    const best = bestEmptySlotForTile(moving);
+
+    if (hereScore === 0 && best.idx !== null && best.score >= 1){
+      // move to better slot
+      chain[idx] = null;
+      chain[best.idx] = moving;
+      toast("Auto-snapped to a better fit ✅");
     }
 
-    // From another slot?
-    const si = chain.findIndex(t => t && t.id === id);
-    if (si !== -1){
-      const moving = chain[si];
-      chain[si] = null;
-      chain[idx] = moving;
-      selectedId = null;
-      render();
-      return;
-    }
+    render();
   }
 
   function returnTileToBank(slotIdx){
@@ -278,9 +381,8 @@
   }
 
   function makeTileUI(tile, where, slotIdx){
-    // Wrapper so we can highlight selection cleanly
     const wrap = document.createElement("div");
-    wrap.className = "tile " + (where === "bank" ? "draggable" : "draggable");
+    wrap.className = "tileWrap draggable";
     if (selectedId === tile.id) wrap.classList.add("selected");
     wrap.draggable = true;
     wrap.dataset.id = tile.id;
@@ -316,9 +418,7 @@
       btns.appendChild(back);
     }
 
-    // Tap-to-place selection
     wrap.onclick = (e)=>{
-      // Don’t toggle selection if clicking a button
       if (e.target && e.target.tagName === "BUTTON") return;
       setSelected(tile.id);
     };
@@ -333,6 +433,59 @@
     return wrap;
   }
 
+  function computeProgress(){
+    // Total connections = chain.length-1, plus optional start/end anchor checks (if enabled)
+    const totalConnections = Math.max(0, chain.length - 1);
+    let correct = 0;
+    let filledPairsCounted = 0;
+
+    // Adjacent correctness (count only where both tiles exist)
+    for (let i=0;i<chain.length-1;i++){
+      if (!chain[i] || !chain[i+1]) continue;
+      filledPairsCounted++;
+      if (eq(chain[i].right, chain[i+1].left)) correct++;
+    }
+
+    // Anchors (optional, only if slot 0 or last filled)
+    let anchorTotal = 0;
+    let anchorCorrect = 0;
+    if (showAnchors){
+      anchorTotal = 2;
+      if (chain[0]) anchorCorrect += eq(chain[0].left, expectedStart) ? 1 : 0;
+      if (chain[chain.length-1]) anchorCorrect += eq(chain[chain.length-1].right, expectedEnd) ? 1 : 0;
+    }
+
+    const total = totalConnections + anchorTotal;
+    const got = correct + anchorCorrect;
+
+    // For the bar, we show progress out of total possible checks, but note if not all are currently “checkable”
+    return {
+      total,
+      got,
+      filledPairsCounted,
+      totalConnections,
+      anchorTotal,
+      anchorCorrect
+    };
+  }
+
+  function renderProgress(){
+    const p = computeProgress();
+    metricText.textContent = `Correct connections: ${p.got} / ${p.total}`;
+
+    const pct = (p.total === 0) ? 0 : Math.round((p.got / p.total) * 100);
+    barInner.style.width = pct + "%";
+
+    const filledSlots = chain.filter(Boolean).length;
+    if (filledSlots === 0){
+      noteText.textContent = "Fill slots to see progress.";
+    } else if (filledSlots < chain.length){
+      noteText.textContent = `Placed ${filledSlots}/${chain.length} tiles. Progress updates as neighbors touch.`;
+    } else {
+      noteText.textContent = "All tiles placed — hit Check for final verification.";
+    }
+  }
+
   function render(){
     // Anchors
     const anchors = document.getElementById("anchors");
@@ -344,7 +497,7 @@
       anchors.style.display = "none";
     }
 
-    // Slots (vertical)
+    // Slots
     slotsEl.innerHTML = "";
     chain.forEach((tile, idx)=>{
       const slot = document.createElement("div");
@@ -359,7 +512,6 @@
         placeTileInSlot(id, idx);
       });
 
-      // Tap-to-place: tap slot after selecting a tile
       slot.onclick = ()=>{
         if (selectedId) placeTileInSlot(selectedId, idx);
       };
@@ -376,12 +528,11 @@
       slotsEl.appendChild(slot);
     });
 
-    // Bank (grid)
+    // Bank
     bankEl.innerHTML = "";
-    bankTiles.forEach(t => {
-      const el = makeTileUI(t, "bank", -1);
-      bankEl.appendChild(el);
-    });
+    bankTiles.forEach(t => bankEl.appendChild(makeTileUI(t, "bank", -1)));
+
+    renderProgress();
   }
 
   function shuffleBank(){
@@ -420,9 +571,9 @@
       return;
     }
 
+    const mid = wrongAfter.filter(x=>x>=0);
     const parts = [];
     parts.push(`<b>Not quite.</b>`);
-    const mid = wrongAfter.filter(x=>x>=0);
     if (mid.length){
       parts.push(`<div class="small mono">Mismatch after tile(s): ${mid.map(i=>i+1).join(", ")}</div>`);
     }
@@ -430,7 +581,7 @@
       if (wrongAfter.includes(-1)) parts.push(`<div class="small mono">Start tile left side doesn’t match START.</div>`);
       if (wrongAfter.includes(chain.length-1)) parts.push(`<div class="small mono">End tile right side doesn’t match END.</div>`);
     }
-    parts.push(`<div class="small">Tip: swap positions (and flip tiles if enabled).</div>`);
+    parts.push(`<div class="small">Tip: swap positions (and flip tiles if enabled). Auto-snap helps when neighbors are already placed.</div>`);
     showFeedback(parts.join(""), "bad");
   }
 
@@ -440,5 +591,6 @@
 
   render();
 </script>
+
 </body>
 </html>
